// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signature should have custom props 1`] = `
<canvas
  class="signature"
  id="foo"
/>
`;

exports[`Signature should receive line segments prop 1`] = `
<canvas
  class="signature"
/>
`;

exports[`Signature should receive line width prop 1`] = `
<canvas
  class="signature"
/>
`;

exports[`Signature should render a default component 1`] = `
<canvas
  class="signature"
/>
`;
